# Location-Based-Business-Model-Recommendation

./: .gitignore  README.md  clusters_map.html  pyproject.toml  requirements.txt  run_all_log.txt  test.txt
.streamlit/: config.toml
app/: batch_predict.py  dashboard.py  predictor.py  report.py
data/processed/: all_recommendations.csv  enriched_dataset.csv  features.csv  final_dataset.csv
data/raw/: ground_truth.csv  gt_log.txt  localities.csv  osm_features.csv  osm_log.txt  rent_data.csv
models/: feature_cols.joblib  gap_report.json  metrics_report.csv  model_bar.joblib  model_beauty_salon.joblib  model_cafe.joblib  model_confidence.json  model_gym.joblib  model_lodging.joblib  model_night_club.joblib  model_pharmacy.joblib  model_restaurant.joblib  model_school.joblib  model_store.joblib  neighbors.json  rf_bar.joblib  rf_beauty_salon.joblib  rf_cafe.joblib  rf_gym.joblib  rf_lodging.joblib  rf_multi_output.joblib  rf_night_club.joblib  rf_pharmacy.joblib  rf_restaurant.joblib  rf_school.joblib  rf_store.joblib  shap_importance.json
scripts/: 01_localities.py  02_osm_features.py  03_ground_truth.py  04_rent_data.py  05_merge.py  06_footfall.py  07_clustering.py  08_model.py  09_enrich.py  10_similarity.py  common.py  run_all.py
tests/: test_pipeline.py
